 - fix potential gsRNG.Next*() eval-order desync
 - fix OOB memory-read in GameSetup::LoadTeams
 - fix map-damage explosions being processed twice
 - fix explosions causing terraform-spikes on certain maps
 - fix UnitDamaged events following UnitDestroyed
 - fix BuilderCAI crash when parsing invalid build-commands
 - fix canBeAssisted-check in Builder::StartBuild
 - fix ATI driver crash with BumpWater (on any map without a coastline) in TextureAtlas generation
 - fix crash in AdvTreeDrawer on ARB-only junkware
 - fix crash in InfoTextureHandler on ARB-only junkware
 - fix PlayerRoster causing memory corruption on reload
 - fix random WaitingDamage memory corruption
 - fix Light::ClearDeathDependencies memory corruption
 - fix CollisionHander::MouseHit not taking relMidPos translation into account
 - fix LosHandler::UnitLoaded removing LOS from non-stunned units
 - fix calling alSourcePlay even if alSourceQueueBuffers produced an error
 - fix CheckEnlargeDrawArray for VA_TYPE's larger than 10 floats
 - fix crash if unit is assigned an empty COB-script
 - do not bitshift negative values (undefined behavior)
 - catch invalid CmdDesc indices in GuiHandler::DrawButtons
 - insert missing eventHandler.RemoveClient call in RoamMeshDrawer

 - fix #5630 (free line-of-fire detection failure)
 - fix #5287 (help units in firebases with a collideFireBase weapondef flag)
 - fix #2970 ("pushResistant" is now accepted by MoveCtrl.SetGroundMoveTypeData)
 - fix #3515 (better error-messages for the /team command)
 - fix #5200 (broken ctrl+mousewheel tilt transitions with 'Spring' camera)
 - fix #5258 (custom selection volumes)
 - fix #5632 (show a slightly more interesting black screen on startup)
 - fix #5629 (make footprint-terraforming respect buildee's actual facing)
 - fix #4447 (FPS-mode locking onto out-of-LOS units)
 - fix #4074 (equalize UnitDamaged parameters for LuaUI and LuaRules)
 - fix #2855 #5092 #5180 (jagged terrain shadows)