@@ -216,7 +216,7 @@ namespace Shader {
 
 	private:
 		virtual int GetUniformLoc(const std::string& name) = 0;
-		virtual int GetUniformType(const int loc) = 0;
+		virtual int GetUniformType(const int idx) = 0;
 
 		UniformState* GetNewUniformState(const std::string name);
 		UniformState* GetUniformState(const std::string& name) {
@@ -269,7 +269,7 @@ namespace Shader {
 		void Link() {}
 
 		int GetUniformLoc(const std::string& name) { return -1; }
-		int GetUniformType(const int loc) { return -1; }
+		int GetUniformType(const int idx) { return -1; }
 
 		void SetUniform1i(int idx, int   v0) {}
 		void SetUniform2i(int idx, int   v0, int   v1) {}
@@ -301,7 +301,7 @@ namespace Shader {
 		bool Validate() { return true; }
 
 		int GetUniformLoc(const std::string& name) { return -1; } // FIXME
-		int GetUniformType(const int loc) { return -1; }
+		int GetUniformType(const int idx) { return -1; }
 		void SetUniformTarget(int target);
 		int GetUnitformTarget();
 
@@ -362,7 +362,7 @@ namespace Shader {
 		void SetUniformMatrix4fv(int idx, bool transp, const float* v);
 
 	private:
-		int GetUniformType(const int loc);
+		int GetUniformType(const int idx);
 		int GetUniformLoc(const std::string& name);
 
 		void SetUniform(UniformState* uState, int   v0);
